apps/dev/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-oauth2
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingresskubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: oauth2-proxy.systemtracker.no-ip.org
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /oauth2
        pathType: ImplementationSpecific
  #tls:
  #- hosts:
  #  - oauth2-proxy.systemtracker.no-ip.org
  #  secretName: oauth-tls
